  (Jean-Francois Roy)

* The ``pb`` argument to ``fetch()`` is deprecated.
  (Martin Pool)

* The smart server jail now hooks into BzrDir.open to prevent any BzrDir
  that is not inside the backing transport from being opened.  See the
  module documentation for ``bzrlib.smart.request`` for details.
  (Andrew Bennetts, Robert Collins)

Testing
*******

* ``bzrlib.tests.TestCase`` now fails the test if its own ``setUp``
  and ``tearDown`` weren't called.  This catches faulty tests that
  forget to upcall when overriding ``setUp`` and ``tearDown``.  Those
  faulty tests were not properly isolated.
  (Andrew Bennetts, Robert Collins)

* Fix test_msgeditor.MsgEditorTest test isolation.
  (Vincent Ladeuil, #347130)

* ``medusa`` is not used anymore as an FTP test server starting with
  python2.6. A new FTP test server based on ``pyftplib`` can be used
  instead. This new server is a soft dependency as medusa which is still
  preferred if both are available (modulo python version).
  (Vincent Ladeuil)

Internals
*********

* ``BtreeIndex._spill_mem_keys_to_disk()`` now generates disk index with
  optmizations turned off. This only has effect when processing > 100,000
  keys during something like ``bzr pack``. (John Arbash Meinel)

* ``bzr selftest`` now accepts ``--subunit`` to run in subunit output
  mode. Requires ``lp:subunit`` installed to work, but is not a hard
  dependency. (Robert Collins)

* ``BzrDir.open_branch`` now takes an optional ``ignore_fallbacks``
  parameter for controlling opening of stacked branches.
  (Andrew Bennetts, Robert Collins)
  
* ``CommitBuilder`` has a new method, ``record_iter_changes`` which works
  in terms of an iter_changes iterator rather than full tree scanning.
  (Robert Collins)

* ``DirState`` can now be passed a custom ``SHA1Provider`` object
  enabling it to store the SHA1 and stat of the canonical (post
  content filtered) form. (Ian Clatworthy)

* New ``assertLength`` method based on one Martin has squirreled away